clean up /signup pages for javascript reference docs

--- a/docs/references/javascript/sign-up/email-verification.mdx
+++ b/docs/references/javascript/sign-up/email-verification.mdx
@@ -5,7 +5,7 @@ description: These are all methods on the SignUp class that allow you to verify 
 
 # Email verification
 
-These are all methods on [the `SignUp` class](/docs/references/javascript/sign-up/sign-up) that allow you to verify a user's sign-up request via email.
+These are all methods on the [`SignUp`](/docs/references/javascript/sign-up/sign-up) class that allow you to verify a user's sign-up request via email.
 
 ## `prepareEmailAddressVerification()`
 
@@ -13,38 +13,16 @@ These are all methods on [the `SignUp` class](/docs/references/javascript/sign-u
 function prepareEmailAddressVerification(params?: PrepareEmailAddressVerificationParams): Promise<SignUp>;
 ```
 
-Helper method that allows you to initiate a verification process for an email address. It basically sends a one-time code to the email address already supplied to the current sign up.
+Helper method that allows you to initiate a verification process for an email address. It basically sends a one-time code to the email address already supplied to the current sign-up.
 
-The defaults of this method are equivalent to calling [`SignUp.prepareVerification("email_code")`](/docs/references/javascript/sign-up/verification#prepareverification).
+The defaults of this method are equivalent to calling [`SignUp.prepareVerification('email_code')`](/docs/references/javascript/sign-up/verification#prepareverification).
 
 ### `PrepareEmailAddressVerificationParams`
 
-<Tables
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
- {cells: [
-      <code>strategy</code>,
-      <code>string</code>,
-      <>
-      The verification strategy to validate the user's sign-up request. The following strategies are supported:
-      <ul>
-        <li><code>email_code</code>: Send an email with a unique token to input.</li>
-        <li><code>email_link</code>: Send an email with a link which validates sign-up</li>
-      </ul>
-      </>
- ]},
- {cells: [
-    <code>redirectUrl</code>,
-    <code>string</code>,
-    <>
-    The URL to redirect the user to after the verification process is complete. <strong>Only supported on <code>email_link</code>, <code>oauth_*</code>, and <code>saml</code> strategies</strong>.
-    </>
- ]}
-  ]}
-/>
-
-
+| Name | Type | Description |
+| --- | --- | --- |
+| `strategy` | `'email_code' \| 'email_link'` | The verification strategy to validate the user's sign-up request.<br />The following strategies are supported:<br /><ul><li>`email_code`: Send an email with a unique token to input.</li><li>`email_link`: Send an email with a link which validates sign-up</li></ul> |
+| `redirectUrl` | `string` | The URL to redirect the user to after the verification process is complete.<br />Only supported on `email_link`, `oauth_<provider>`, and `saml` strategies. |
 
 ## `attemptEmailAddressVerification()`
 
@@ -54,22 +32,10 @@ function attemptEmailAddressVerification(params: AttemptEmailAddressVerification
 
 Helper method that attempts to complete the verification process for an email address. It basically verifies that the supplied code is the same as the one-time code that was sent to the email address during the prepare verification phase.
 
-This is equivalent to calling [`SignUp.attemptVerification({strategy: "email_code", ...params})`](/docs/references/javascript/sign-up/verification#attempt-verification).
+This is equivalent to calling [`SignUp.attemptVerification({strategy: 'email_code', ...params})`](/docs/references/javascript/sign-up/verification#attempt-verification).
 
 ### `AttemptEmailAddressVerificationParams`
 
-<Tables
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
- {
-    cells: [
-        <code>code</code>,
-        <code>string</code>,
-        <>
-        The code that was sent to the user via email.
-        </>
-        ]
- }
-  ]}
-/>
+| Name | Type | Description |
+| --- | --- | --- |
+| `code` | `string` | The code that was sent to the user via email. |
