--- a/docs/references/javascript/sign-up/phone-verification.mdx
+++ b/docs/references/javascript/sign-up/phone-verification.mdx
@@ -5,7 +5,7 @@ description: These are all methods on the SignUp class that allow you to verify 
 
 # Phone verification
 
-These are all methods on [the `SignUp` class](/docs/references/javascript/sign-up/sign-up) that allow you to verify a user's sign-up request via a phone number.
+These are all methods on the [`SignUp`][signup-ref] class that allow you to verify a user's sign-up request via a phone number.
 
 ## `preparePhoneNumberVerification()`
 
@@ -19,22 +19,9 @@ This is equivalent to calling [`SignUp.prepareVerification("phone_code")`](/docs
 
 ### `PreparePhoneNumberVerificationParams`
 
-<Tables
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
- {cells: [
-      <code>strategy</code>,
-      <code>string</code>,
-      <>
-      The verification strategy to validate the user's sign-up request. The following strategies are supported:
-      <ul>
-        <li><code>phone_code</code>: Send an SMS with a unique token to input.</li>
-      </ul>
-      </>
- ]},
-  ]}
-/>
+| Name | Type | Description |
+| --- | --- | --- |
+| `strategy` | `'phone_code'` | The verification strategy to validate the user's sign-up request.<br/>The following strategies are supported:<br/><ul><li>`phone_code`: Send an SMS with a unique token to input.</li></ul> |
 
 ## `attemptPhoneNumberVerification()`
 
@@ -48,18 +35,8 @@ This is equivalent to calling [`SignUp.attemptVerification({strategy: "phone_cod
 
 ### `AttemptPhoneNumberVerificationParams`
 
-<Tables
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
- {
-    cells: [
-        <code>code</code>,
-        <code>string</code>,
-        <>
-        The code that was sent to the user via SMS.
-        </>
-        ]
- }
-  ]}
-/>
+| Name | Type | Description |
+| --- | --- | --- |
+| `code` | `string` | The code that was sent to the user via SMS. |
+
+[signup-ref]: /docs/references/javascript/sign-up/sign-up
