--- a/docs/references/javascript/sign-up/verification.mdx
+++ b/docs/references/javascript/sign-up/verification.mdx
@@ -5,7 +5,7 @@ description: These are all methods on the SignUp class that allow you to verify 
 
 # Verification
 
-These are all methods on [the `SignUp` class](/docs/references/javascript/sign-up/sign-up) that allow you to verify a user's sign-up request.
+These are all methods on the [`SignUp`](/docs/references/javascript/sign-up/sign-up) class that allow you to verify a user's sign-up request.
 
 ## `prepareVerification()`
 
@@ -15,39 +15,15 @@ function prepareVerification(params: PrepareVerificationParams): Promise<SignUp>
 
 The `prepareVerification` is used to initiate the verification process for a field that requires it. As mentioned above, there are two fields that need to be verified:
 
-- **`emailAddress`**: The email address can be verified via an email code. This is a one-time code that is sent to the email already provided to the SignUp object. The `prepareVerification` sends this email.
-- **`phoneNumber`**: The phone number can be verified via a phone code. This is a one-time code that is sent via an SMS to the phone already provided to the SignUp object. The `prepareVerification` sends this SMS.
+- `emailAddress`: The email address can be verified via an email code. This is a one-time code that is sent to the email already provided to the SignUp object. The `prepareVerification` sends this email.
+- `phoneNumber`: The phone number can be verified via a phone code. This is a one-time code that is sent via an SMS to the phone already provided to the SignUp object. The `prepareVerification` sends this SMS.
 
 ### `PrepareVerificationParams`
 
-<Tables
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
- {cells: [
-      <code>strategy</code>,
-      <code>string</code>,
-      <>
-      The verification strategy to validate the user's sign-up request. The following strategies are supported:
-      <ul>
-        <li><code>phone_code</code>: Send an SMS with a unique token to input.</li>
-        <li><code>email_code</code>: Send an email with a unique token to input.</li>
-        <li><code>email_link</code>: Send an email with a link which validates sign-up</li>
-        <li><code>saml</code>: Authenticate against SAML. Experimental</li>
-        <li><code>oauth_*</code>: Authenticate against <a href="/docs/references/javascript/sign-in/authenticate-with#o-auth-strategy">various OAuth providers</a>.</li>
-        <li><code>web3_*_signature</code>: Authenticate against Web3 signatures.</li>
-      </ul>
-      </>
- ]},
- {cells: [
-    <code>redirectUrl</code>,
-    <code>string</code>,
-    <>
-    The URL to redirect the user to after the verification process is complete. <strong>Only supported on <code>email_link</code>, <code>oauth_*</code>, and <code>saml</code> strategies</strong>.
-    </>
- ]}
-  ]}
-/>
+| Name | Type | Description |
+| --- | --- | --- |
+| `strategy` | `'phone_code' \| 'email_code' \| 'email_link' \| 'saml' \| 'oauth_<provider>' \| 'web3_metamask_signature'` | The verification strategy to validate the user's sign-up request.<br/>The following strategies are supported:<br/><ul><li>`phone_code`: Send an SMS with a unique token to input.</li><li>`email_code`: Send an email with a unique token to input.</li><li>`email_link`: Send an email with a link which validates sign-up</li><li>`saml`: Authenticate against SAML. Experimental</li><li>`oauth_<provider>`: Authenticate against various [OAuth providers](/docs/references/javascript/types/oauth-strategy).</li><li>`web3_metamask_signature`: The verification will attempt to be completed using the user's web3 wallet public address. The `web3_wallet_id` parameter can also be specified to select which of the user's known web3 wallets will be used. Currently Clerk supports [Metamask](https://metamask.io/).</li></ul> |
+| `redirectUrl` | `string` | The URL to redirect the user to after the verification process is complete.<br />Only supported on `email_link`, `oauth_<provider>`, and `saml` strategies. |
 
 ## `attemptVerification()`
 
@@ -61,39 +37,8 @@ Depending on the strategy, the method parameters could differ.
 
 ### `AttemptVerificationParams`
 
-<Tables
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
- {cells: [
-    <code>strategy</code>,
-      <code>string</code>,
-      <>
-      The verification strategy to complete the user's sign-up request against. The following strategies are supported:
-      <ul>
-        <li><code>phone_code</code>: Validates an SMS with a unique token to input.</li>
-        <li><code>email_code</code>: Validates an email with a unique token to input.</li>
-        <li><code>web3_*_signature</code>: Authenticate against Web3 signatures.</li>
-      </ul>
-      </>
- ]},
- {
-    cells: [
-        <code>code</code>,
-        <code>string</code>,
-        <>
-        The code that was sent to the user via the <code>phone_code</code> or <code>email_code</code> verification strategies.
-        </>
-        ]
- },
-    {
-        cells: [
-            <code>signature</code>,
-            <code>string</code>,
-            <>
-            The signature that was sent to the user via the Web3 verification strategy.
-            </>
-            ]
-    }
-    ]}
-/>
+| Name | Type | Description |
+| --- | --- | --- |
+| `strategy` | `'phone_code' \| 'email_code' \| 'web3_metamask_signature'` | The verification strategy to complete the user's sign-up request against.<br/>The following strategies are supported:<br/><ul><li>`phone_code`: Validates an SMS with a unique token to input.</li><li>`email_code`: Validates an email with a unique token to input.</li><li>`web3_metamask_signature`: The verification will attempt to be completed using the user's web3 wallet public address. The `web3_wallet_id` parameter can also be specified to select which of the user's known web3 wallets will be used. Currently Clerk supports [Metamask](https://metamask.io/).</li></ul> |
+| `code` | `string` | The code that was sent to the user via the `phone_code` or `email_code` verification strategies. |
+| `signature` | `string` | The signature that was sent to the user via the Web3 verification strategy. |
