--- a/docs/references/javascript/sign-up/web3-verification.mdx
+++ b/docs/references/javascript/sign-up/web3-verification.mdx
@@ -3,13 +3,9 @@ title: Web3 Verification
 description: These are all methods on the SignUp class that allow you to verify a user's sign-up request via a web3 wallet.
 ---
 
-import { Tables } from "@/components/Table";
-import { Images } from "@/components/Images";
-import { CodeBlockTabs } from "@/components/CodeBlockTabs";
-
 # Web3 verification
 
-These are all methods on [the `SignUp` class](/docs/references/javascript/sign-up/sign-up) that allow you to verify a user's sign-up request via a web3 wallet.
+These are all methods on the [`SignUp`][signup-ref] class that allow you to verify a user's sign-up request via a web3 wallet.
 
 ## `prepareWeb3WalletVerification()`
 
@@ -33,15 +29,8 @@ This is equivalent to calling [`SignUp.attemptVerification({strategy: "web3_meta
 
 ### `AttemptWeb3WalletVerificationParams`
 
+| Name | Type | Description |
+| --- | --- | --- |
+| `identifier` | `string` | The user's Web3 ID |
 
-<Tables
-  headings={['Name', 'Type', 'Description']}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={
-        [{cells: [
-            <code>identifier</code>,
-            <code>{"string"}</code>,
-            <>The user's Web3 ID</>
-        ]}
-    ]}
-/>
+[signup-ref]: /docs/references/javascript/sign-up/sign-up
