--- a/docs/references/javascript/sign-up/authenticate-with.mdx
+++ b/docs/references/javascript/sign-up/authenticate-with.mdx
@@ -1,15 +1,11 @@
 ---
-title: Authenticate With
+title: AuthenticateWith
 description: These are all methods on the SignUp class that allow you to authenticate with different methods.
 ---
 
-import { Tables } from "@/components/Table";
-import { Images } from "@/components/Images";
-import { CodeBlockTabs } from "@/components/CodeBlockTabs";
+# AuthenticateWith
 
-# Authenticate With
-
-These are all methods on [the `SignUp` class](/docs/references/javascript/sign-up/sign-up) that allow you to authenticate with different methods.
+These are all methods on the [`SignUp`][signup-ref] class that allow you to authenticate with different methods.
 
 ## `authenticateWithRedirect()`
 
@@ -21,52 +17,14 @@ Signs up users via OAuth, where an external account provider is used to verify t
 
 ### `AuthenticateWithRedirectParams`
 
-<Tables
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
-        {
-            cells: [<code>redirectUrl</code>, <code>string</code>,
-            <>
-                Full URL or path to the route that will complete the OAuth or SAML flow.
-                Typically, this will be a simple <code>/sso-callback</code> route that calls <a href="/docs/references/javascript/clerk/handle-navigation#handle-redirect-callback"><code>Clerk.handleRedirectCallback</code></a>
-                or mounts the {"<AuthenticateWithRedirectCallback />"} component.
-            </>
-            ]
-        },
-        {
-            cells: [
-                <code>redirectUrlComplete</code>, <code>string</code>, <>Full URL or path to navigate after the OAuth or SAML flow completes.</>
-            ]
-        },
-        {
-            cells: [
-                <code>continueSignUp</code>, <code>boolean | undefined</code>, <>Whether to continue (i.e. PATCH) an existing SignUp (if present) or create a new SignUp.</>
-            ]
-        },
-        {
-            cells: [
-                <code>strategy</code>, <code>string</code>, <>
-                    One of the supported OAuth providers you can use to authenticate with, eg <code>oauth_google</code>. Or alternatively <code>saml</code>, to authenticate with SAML.
-                </>
-            ]
-        },
-        {
-            cells: [
-                <code>identifier</code>, <code>string | undefined</code>, <>
-                    Identifier to use for targeting a SAML connection at sign-up
-                </>
-            ]
-        },
-        {
-            cells: [
-                <code>emailAddress</code>, <code>string | undefined</code>, <>
-                    Email address to use for targeting a SAML connection at sign-up
-                </>
-            ]
-        }
-    ]}
-/>
+| Name | Type | Description |
+| --- | --- | --- |
+| `redirectUrl` | `string` | Full URL or path to the route that will complete the OAuth or SAML flow. Typically, this will be a simple `/sso-callback` route that calls [`Clerk.handleRedirectCallback`](/docs/references/javascript/clerk/handle-navigation#handle-redirect-callback) or mounts the [`<AuthenticateWithRedirectCallback />`](/docs/components/control/authenticate-with-callback) component. |
+| `redirectUrlComplete` | `string` | Full URL or path to navigate after the OAuth or SAML flow completes. |
+| `continueSignUp` | `boolean \| undefined` | Whether to continue (i.e. PATCH) an existing [`SignUp`][signup-ref] (if present) or create a new [`SignUp`][signup-ref]. |
+| `strategy` | `'oauth_<provider>' \| 'saml'` | The strategy to use for authentication.<br />The following strategies are supported:<br /><ul><li>`oauth_<provider>`: The user will be authenticated with their Social login account. See available [OAuth Strategies](/docs/references/javascript/types/oauth-strategy).</li><li>`saml`: The user will be authenticated with SAML.</li></ul> |
+| `identifier` | `string \| undefined` | Identifier to use for targeting a SAML connection at sign-up. |
+| `emailAddress` | `string \| undefined` | Email address to use for targeting a SAML connection at sign-up. |
 
 ## `authenticateWithWeb3()`
 
@@ -74,41 +32,17 @@ Starts a sign up flow that authenticates the user against their public wallet ad
 
 #### `AuthenticateWithWeb3Params`
 
-<Tables
-  headings={['Name', 'Type', 'Description']}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={
-        [{cells: [
-            <code>identifier</code>,
-            <code>{"string"}</code>,
-            <>The user's Web3 ID</>
-        ]},
-        {cells: [
-        <code>generateSignature</code>,
-        <code>{"(opts: GenerateSignatureParams) => Promise<string>"}</code>,
-        <>The method of how to generate the signature for the Web3 sign-in. See <a href="#generate-signature-params"><code>GenerateSignatureParams</code></a> for more details.</>
-        ]}
-    ]}
-/>
+| Name | Type | Description |
+| --- | --- | --- |
+| `identifier` | `string` | The user's Web3 ID |
+| `generateSignature` | <code>(opts: [GenerateSignatureParams](#generate-signature-params)) => Promise\<string\></code> | The method of how to generate the signature for the Web3 sign-in. See [`GenerateSignatureParams`](#generate-signature-params) for more details. |
 
 ##### `GenerateSignatureParams`
 
-<Tables
-  headings={['Name', 'Type', 'Description']}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={
-        [{cells: [
-            <code>identifier</code>,
-            <code>{"string"}</code>,
-            <>The user's Web3 ID</>
-        ]},
-        {cells: [
-        <code>nonce</code>,
-        <code>{"string"}</code>,
-        <>The <a href="https://en.wikipedia.org/wiki/Cryptographic_nonce">crypographic nonce</a> used in the sign-in.</>
-        ]}
-    ]}
-/>
+| Name | Type | Description |
+| --- | --- | --- |
+| `identifier` | `string` | The user's Web3 ID |
+| `nonce` | `string` | The [cryptographic nonce](https://en.wikipedia.org/wiki/Cryptographic_nonce) used in the sign-in. |
 
 ## `authenticateWithMetamask()`
 
@@ -120,16 +54,8 @@ Starts a sign up flow that uses the Metamask browser extension to authenticate t
 
 ### `SignUpAuthenticateWithMetamaskParams`
 
-<Tables
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
-        {
-            cells: [
-                <code>unsafeMetadata</code>, <code>object</code>, <>
-                Custom fields that will be attached to the <code>User</code> object post-signup
-                </>
-            ]
-        },
-    ]}
-/>
+| Name | Type | Description |
+| --- | --- | --- |
+| `unsafeMetadata` | `{[string]: any}` | Custom fields that will be attached to the [`User`](/docs/references/javascript/user/user) object post-signup. |
+
+[signup-ref]: /docs/references/javascript/sign-up/sign-up
