--- a/docs/references/javascript/client.mdx
+++ b/docs/references/javascript/client.mdx
@@ -11,18 +11,14 @@ The `Client` object also holds information about any sign in or sign up attempts
 
 ## Properties
 
-<Tables
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
-{cells: [<code>signIn</code>, <code>SignIn | null</code>, <>The current sign in attempt, or <code>null</code> if there is none.</>]},
-{cells: [<code>signUp</code>, <code>SignUp  | null</code>, <>The current sign up attempt, or <code>null</code> if there is none.</>]},
-{cells: [<code>sessions</code>, <code><a href="/docs/references/javascript/session">Session</a>[]</code>, <>A list of sessions that have been created on this client.</>]},
-{cells: [<code>activeSessions</code>, <code><a href="/docs/references/javascript/session">Session</a>[]</code>, <>A list of active sessions on this client.</>]},
-{cells: [<code>lastActiveSessiond</code>, <code>string</code>, <>Unique identifier of the last active <a href="/docs/references/javascript/session">Session</a> on this client.</>]},
-{cells: [<code>updatedAt</code>, <code>Date</code>, <>Timestamp of last update for the client.</>]},
-  ]}
-/>
+| Name | Type | Description |
+| --- | --- | --- |
+| `signIn` | [`SignIn`](/docs/references/javascript/sign-in/sign-in) \| `null` | The current sign in attempt, or `null` if there is none. |
+| `signUp` | [`SignUp`](/docs/references/javascript/sign-up/sign-up) \| `null` | The current sign up attempt, or `null` if there is none. |
+| `sessions` | [`Session[]`](/docs/references/javascript/session) | A list of sessions that have been created on this client. |
+| `activeSessions` | [`Session[]`](/docs/references/javascript/session) | A list of active sessions on this client. |
+| `lastActiveSessiond` | `string` | Unique identifier of the last active [`Session`](/docs/references/javascript/session) on this client. |
+| `updatedAt` | `Date` | Timestamp of last update for the client. |
 
 ## Methods
 
@@ -32,7 +28,7 @@ The `Client` object also holds information about any sign in or sign up attempts
 function isNew(): boolean;
 ```
 
-Returns `true` if this client hasn't been saved (created) yet in the [Frontend API](https://reference.clerk.dev/reference/frontend-api-reference). Returns `false` otherwise.
+Returns `true` if this client hasn't been saved (created) yet in the Frontend API. Returns `false` otherwise.
 
 ### `create()`
 
