Updated examples for App Router

--- a/docs/quickstarts/nextjs.mdx
+++ b/docs/quickstarts/nextjs.mdx
@@ -270,21 +270,21 @@ export default function Example() {
 
 #### App Router
 
-[`getAuth()`](/docs/references/nextjs/get-auth) will retrieve the `userId` of an authenticated user in your Route Handlers. Any requests from a Client Component will automatically include the user's current token as the Bearer token. [`auth()`](/docs/references/nextjs/auth) and [`currentUser()`](/docs/references/nextjs/current-user) are new helpers that you can use inside of your Server Components and Actions.
+[`auth()`](/docs/references/nextjs/auth) and [`currentUser()`](/docs/references/nextjs/current-user) are new helpers that you can use inside of your application. [`auth()`](/docs/references/nextjs/auth) will retrieve the [`Authentication` Object](/docs/references/nextjs/authentication-object) status of a user in your Route Handlers, middleware, Server Components and Server Actions. [`currentUser()`](/docs/references/nextjs/current-user) will work in the same places and return the [`User`][user-object] object. Any requests from a Client Component to a Route Handler will automatically include the user's current token as the Bearer token. 
 
 <Tabs items={["Route Handler", "Route Handler w/ User Fetch", "auth()", "currentUser()"]}>
   <Tab>
-    You can protect your API routes by using the [`getAuth`](/docs/references/nextjs/get-auth) helper. 
+    You can protect your API routes by using the [`auth()`](/docs/references/nextjs/auth) helper, if the route is not protected my [middleware](/docs/references/nextjs/auth-middleware). 
 
     ```tsx filename="app/api/user/route.[jsx/tsx]"
     import { NextResponse } from 'next/server';
-    import { getAuth } from '@clerk/nextjs/server';
- 
-    export async function POST(req: Request, res: NextResponse) {  
-      const { userId } = getAuth(req);
-  
-      if(!userId){
-        return NextResponse("Unauthorized", { status: 401 });
+    import { auth } from '@clerk/nextjs';
+
+    export async function GET(req: Request, res: NextResponse) {
+      const { userId } = auth();
+
+      if (!userId) {
+        return new NextResponse("Unauthorized", { status: 401 });
       }
 
       // Perform your Route Handler's logic
@@ -294,31 +294,31 @@ export default function Example() {
     ```
   </Tab>
   <Tab>
-    You can protect your API routes by using the [`getAuth`](/docs/references/nextjs/get-auth) helper. 
+    You can protect your API routes by using the [`auth()`](/docs/references/nextjs/auth) helper, if the route is not protected my [middleware](/docs/references/nextjs/auth-middleware). 
 
-    In some cases, you may need the full [`User`][user-object] object. For example, if you want to access the user's email address address or name, you can use the [`clerkClient`](/docs/references/backend/overview) helper to get the full [`User`][user-object] object.
+    In some cases, you may need the full [`User`][user-object] object. For example, if you want to access the user's email address address or name, you can use  [`currentUser()`](/docs/references/nextjs/current-user) helper to get the full [`User`][user-object] object.
 
    ```tsx filename="app/api/user/route.ts"
-   import { NextResponse } from 'next/server';
-    import { clerkClient, getAuth } from "@clerk/nextjs/server";
+    import { NextResponse } from 'next/server';
+    import { currentUser, auth } from "@clerk/nextjs";
 
-    export async function POST(req: Request, res: NextResponse) {  
-      const { userId } = getAuth(req);
-  
-      if(!userId){
+    export async function GET(req: Request, res: NextResponse) {
+      const { userId } = auth();
+
+      if (!userId) {
         return new NextResponse("Unauthorized", { status: 401 });
       }
 
-     const user = await clerkClient.users.getUser(userId);
+      const user = await currentUser();
 
       // Perform your Route Handler's logic with the returned user object
 
-     return NextResponse.json({"user": user}, { status: 200})
+      return NextResponse.json({ "user": user }, { status: 200 })
     }
   ```
   </Tab>
   <Tab>
-    Clerk has introduced a new [`auth()`](/docs/references/nextjs/auth) helper that returns the same [`Authentication` Object](/docs/references/nextjs/authentication-object) as [`getAuth(req)`](/docs/references/nextjs/get-auth) in middleware, getServerSideProps, and API routes.
+    Clerk has introduced a new [`auth()`](/docs/references/nextjs/auth) helper that returns the [`Authentication` Object](/docs/references/nextjs/authentication-object) status of the user.
 
     Since request data like `headers()` and `cookies()` is now available in the global scope for Next.js, you no longer need to explicitly pass a `Request` object to Clerk.
 
