--- a/docs/quickstarts/nextjs.mdx
+++ b/docs/quickstarts/nextjs.mdx
@@ -270,11 +270,19 @@ export default function Example() {
 
 #### App Router
 
-[`auth()`](/docs/references/nextjs/auth) and [`currentUser()`](/docs/references/nextjs/current-user) are new helpers that you can use inside of your application. [`auth()`](/docs/references/nextjs/auth) will retrieve the [`Authentication` Object](/docs/references/nextjs/authentication-object) status of a user in your Route Handlers, middleware, Server Components and Server Actions. [`currentUser()`](/docs/references/nextjs/current-user) will work in the same places and return the [`User`][user-object] object. Any requests from a Client Component to a Route Handler will automatically include the user's current token as the Bearer token. 
+[`auth()`][auth-ref] and [`currentUser()`][currentuser-ref] are new helpers that you can use inside of your Route Handlers, middleware, Server Components, and Server Actions.
 
-<Tabs items={["Route Handler", "Route Handler w/ User Fetch", "auth()", "currentUser()"]}>
+The [`auth()`][auth-ref] helper will return the [`Authentication`](/docs/references/nextjs/authentication-object) object of the currently active user. Since request data like `headers()` and `cookies()` is now available in the global scope for Next.js, you no longer need to explicitly pass a `Request` object to Clerk.
+
+The [`currentUser()`][currentuser-ref] helper will return the [`User`][user-object] object of the currently active user. This is helpful if you want to render information, like their first and last name, directly from the server.
+
+<Callout type="info">
+  Any requests from a Client Component to a Route Handler will automatically include the user's current token as the Bearer token.
+</Callout>
+
+<Tabs items={["Route Handler", "Route Handler w/ User Fetch"]}>
   <Tab>
-    You can protect your API routes by using the [`auth()`](/docs/references/nextjs/auth) helper, if the route is not protected my [middleware](/docs/references/nextjs/auth-middleware). 
+    You can protect your API routes by using the [`auth()`](/docs/references/nextjs/auth) helper, if the route is not protected by [middleware](/docs/references/nextjs/auth-middleware). 
 
     ```tsx filename="app/api/user/route.[jsx/tsx]"
     import { NextResponse } from 'next/server';
@@ -294,9 +302,9 @@ export default function Example() {
     ```
   </Tab>
   <Tab>
-    You can protect your API routes by using the [`auth()`](/docs/references/nextjs/auth) helper, if the route is not protected my [middleware](/docs/references/nextjs/auth-middleware). 
+    You can protect your API routes by using the [`auth()`](/docs/references/nextjs/auth) helper, if the route is not protected by [middleware](/docs/references/nextjs/auth-middleware). 
 
-    In some cases, you may need the full [`User`][user-object] object. For example, if you want to access the user's email address address or name, you can use  [`currentUser()`](/docs/references/nextjs/current-user) helper to get the full [`User`][user-object] object.
+    In some cases, you may need the full [`User`][user-object] object. For example, if you want to access the user's email address address or name, you can use  [`currentUser()`](/docs/references/nextjs/current-user) helper to get the full [`User`][user-object] object. Under the hood, this calls `fetch()` so it is automatically deduped per request.
 
    ```tsx filename="app/api/user/route.ts"
     import { NextResponse } from 'next/server';
@@ -317,42 +325,11 @@ export default function Example() {
     }
   ```
   </Tab>
-  <Tab>
-    Clerk has introduced a new [`auth()`](/docs/references/nextjs/auth) helper that returns the [`Authentication` Object](/docs/references/nextjs/authentication-object) status of the user.
-
-    Since request data like `headers()` and `cookies()` is now available in the global scope for Next.js, you no longer need to explicitly pass a `Request` object to Clerk.
-
-    ```tsx filename="app/page.tsx"
-    import { auth } from "@clerk/nextjs";
-
-    export default function Page() {
-      const { userId } = auth();
-      // ...
-    }
-    ```
-    </Tab>
-
-    <Tab>
-    Clerk has introduced a new [`currentUser()`](/docs/references/nextjs/current-user) helper that loads the [`User`][user-object] object for the authenticated user from Clerk's Backend API. This is helpful if you want to render information, like their first and last name, directly from the server.
-
-    Under the hood, this calls `fetch()` so it is automatically deduped per request.
-
-    ```tsx filename="page.tsx"
-    import { currentUser } from "@clerk/nextjs";
-
-    export default async function Page() {
-      const user = await currentUser();
-      // ...
-    }
-    ```
-  </Tab>
-
 </Tabs>
 
 #### Pages Router
 
 <Tabs items={["API Route", "API Route w/ User Fetch", "getServerSideProps"]}>
-
   <Tab>
     For Next.js apps using the Pages Router, you can protect your API routes by using the [`getAuth`](/docs/references/nextjs/get-auth) helper and retrieve data from your own systems.
 
@@ -364,8 +341,7 @@ export default function Example() {
       const { userId } = getAuth(req);
 
       if (!userId) {
-        res.status(401).json({ error: "Unauthorized" });
-        return;
+        return res.status(401).json({ error: "Unauthorized" });
       }
 
       // retrieve data from your database
@@ -427,7 +403,7 @@ export default function Example() {
     };
     ```
 
-    You can also access the full [`User`][user-object] object before passing it to the page using the `clerkClient` helper.
+    You can also access the full [`User`][user-object] object before passing it to the page by using the `clerkClient` helper.
 
     ```tsx filename="pages/example.tsx"
     import { clerkClient } from "@clerk/nextjs";
@@ -443,7 +419,6 @@ export default function Example() {
     };
     ```
   </Tab>
-
 </Tabs>
 
 
@@ -465,3 +440,5 @@ Now that your Next.js application is integrated with Clerk, you will want to rea
 
 [clerk-provider]: /docs/components/clerk-provider
 [user-object]: /docs/references/javascript/user/user
+[auth-ref]: /docs/references/nextjs/auth
+[currentuser-ref]: /docs/references/nextjs/current-user
